--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -161,6 +161,7 @@
         />
     
     <Button
+        android:id="@+id/btn_click"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true" 
